create Map for attachments and fix refactor fields and methods